CB-3238 Make license mandatory for CM cluster setup - Throw exception if license file is not present during mock startup - Add dummy license for integration test and remove CM begin trial logic